--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -23,6 +23,8 @@ jobs:
 
       - run: pip install .[dev]  # pyinstaller 5.9 does not like pyproject.toml + editable installs.
       - run: python -u release/build.py installbuilder-installer msix-installer
+        env:
+          CI_BUILD_KEY: ${{ secrets.CI_BUILD_KEY || 'mocked_key_for_testing' }}
 
       - uses: actions/upload-artifact@v4
         with:
